所有loader安装器

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <ul>
+        <input type="text" placeholder="xixi">
         <li>我是第1行</li>
         <li>我是第2行</li>
         <li>我是第3行</li>
@@ -19,6 +20,7 @@
         <li>我是第7行</li>
         <li>我是第8行</li>
         <li>我是第9行</li>
+        <div id="app"></div>
     </ul>
 </body>
 
