--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/bundle.js"></script>
+    <!-- <script src="/bundle.js"></script> -->
 </head>
 
 <body>
@@ -21,6 +21,7 @@
         <li>我是第8行</li>
         <li>我是第9行</li>
         <div id="app"></div>
+        <div id="box"></div>
     </ul>
 </body>
 
